# FindPaperSheet

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FindPaperSheetConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/ApplyCornerMask/: ApplyCornerMask.cpp  ApplyCornerMask.hpp  CMakeLists.txt
src/Components/ApplyMask/: ApplyMask.cpp  ApplyMask.hpp  CMakeLists.txt
src/Components/CvFindPaperSheet/: CMakeLists.txt  CvFindPaperSheet_Processor.cpp  CvFindPaperSheet_Processor.hpp
src/Components/ROI/: ROI.hpp  (+1 more)
src/Types/: ContoursArray.hpp  Drawable.hpp  Line.hpp
tasks/: DoubleCalibration.xml  FindModel.xml  FindModelCamera.xml  ShowCorners.xml  ShowCornersCamera.xml  ShowCornersImage.xml  ShowCornersImageImproved.xml  ShowCornersImageImproved1.xml  ShowCornersROIImage.xml  ShowEdgesCamera.xml  ShowEdgesImageNoCalib.xml  ShowImprovedsystem.xml  ShowImprovedsystemImage.xml  ShowROICornersCamera.xml  UndistortAndCalibrate.xml  UndistortAndCalibrateImage.xml  calibrate_chessboard.xml  camera_params  camera_test.xml  find_egdes.xml  improved_system__image.xml  improved_system_send_solvepnp.xml  improved_system_send_solvepnp_camera.xml  improved_system_send_solvepnp_edges.xml  krawedzie.xml  krawedzie_camera.xml  krawedzie_homo.xml  krawedzie_homo_image.xml  krawedzie_obrazek.xml  krawedzie_track.xml  krawedzie_track_publikowanie.xml  showCornersHarrisCamera.xml  system_edges_image.xml  system_send_pnp.xml  test.xml  thresh_test.xml  track_camera_test.xml  track_kartka_camera.xml  znajdowanie_kartki_krawedzie_obrazka.xml  znajdowanie_kartki_ok.xml  (+2 more)
(+34 files in other folders)
